--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@decentralized-identity/did-auth-jose": "^0.1.14",
+    "did-resolver": "^4.1.0",
+    "ethr-did-resolver": "^11.0.3",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
