--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "did-resolver": "^4.1.0",
     "ethers": "^6.13.5",
     "ethr-did-resolver": "^11.0.3",
+    "html5-qrcode": "^2.3.8",
     "next": "15.3.1",
+    "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-qr-code": "^2.0.15",
     "stream-chat": "^8.60.0",
     "stream-chat-react": "^12.14.0"
   },
