--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@decentralized-identity/did-auth-jose": "^0.1.14",
+    "axios": "^1.8.4",
     "did-resolver": "^4.1.0",
     "ethers": "^6.13.5",
     "ethr-did-resolver": "^11.0.3",
     "html5-qrcode": "^2.3.8",
+    "ipfs-http-client": "^60.0.1",
     "next": "15.3.1",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
