--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@decentralized-identity/did-auth-jose": "^0.1.14",
+    "aws-sdk": "^2.1692.0",
     "axios": "^1.8.4",
     "did-resolver": "^4.1.0",
     "ethers": "^6.13.5",
