--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "aws-sdk": "^2.1692.0",
     "axios": "^1.8.4",
     "did-resolver": "^4.1.0",
-    "ethers": "^6.13.5",
     "ethr-did-resolver": "^11.0.3",
     "html5-qrcode": "^2.3.8",
     "ipfs-http-client": "^60.0.1",
@@ -27,9 +26,14 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@nomiclabs/hardhat-ethers": "^2.2.3",
+    "@nomiclabs/hardhat-waffle": "^2.0.6",
     "@tailwindcss/postcss": "^4",
+    "dotenv": "^16.5.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
+    "ethers": "^5.7.2",
+    "hardhat": "^2.23.0",
     "tailwindcss": "^4"
   }
 }
