--- a/package.json
+++ b/package.json
@@ -9,20 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chainsafe/libp2p-noise": "^16.1.3",
     "@decentralized-identity/did-auth-jose": "^0.1.14",
+    "@libp2p/mplex": "^11.0.35",
+    "@libp2p/peer-id-factory": "^4.2.4",
+    "@libp2p/websockets": "^9.2.10",
     "aws-sdk": "^2.1692.0",
     "axios": "^1.8.4",
     "did-resolver": "^4.1.0",
     "ethr-did-resolver": "^11.0.3",
     "html5-qrcode": "^2.3.8",
     "ipfs-http-client": "^60.0.1",
+    "it-pipe": "^3.0.1",
+    "libp2p": "^2.8.5",
     "next": "15.3.1",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-qr-code": "^2.0.15",
     "stream-chat": "^8.60.0",
-    "stream-chat-react": "^12.14.0"
+    "stream-chat-react": "^12.14.0",
+    "uint8arrays": "^5.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
