--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
     "ipfs:init": "mkdir -p ipfs/node0 ipfs/node1 ipfs/cluster0 ipfs/cluster1"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.804.0",
     "@chainsafe/libp2p-noise": "^16.1.3",
     "@decentralized-identity/did-auth-jose": "^0.1.14",
+    "@heroicons/react": "^2.2.0",
     "@libp2p/mplex": "^11.0.35",
     "@libp2p/peer-id-factory": "^4.2.4",
     "@libp2p/websockets": "^9.2.10",
-    "@heroicons/react": "^2.2.0",
     "aws-sdk": "^2.1692.0",
     "axios": "^1.8.4",
     "did-resolver": "^4.1.0",
