--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,7 @@
 ## Neccessary environment variables for the project
 
+NEXT_PUBLIC_INSTANCE_URL=https://libera.network
+
 ## IPFS configuration (S3 compatible backend as gateway)
 NEXT_PUBLIC_S3_ENDPOINT=https://s3.filebase.com
 NEXT_PUBLIC_S3_ACCESS_KEY_ID=IPFS_ACCESS_KEY
